--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/carrentdb
-spring.datasource.username=carrentuser
-spring.datasource.password=mypass
+spring.datasource.url=jdbc:postgresql://dbcarrent.ckcrz8rn21mg.us-east-2.rds.amazonaws.com:5432/dbcarrentdemo
+spring.datasource.username=userdb
+spring.datasource.password=userdbpass
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
