--- a/pom.xml
+++ b/pom.xml
@@ -62,10 +62,13 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>42.2.16</version>
         </dependency>
+
     </dependencies>
 
     <build>
